refactor: Update component scanning and configuration for inbox and outbox processing